# LIT-PID

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
lit_pid/: csv_logger.py  four_wheel_robot.urdf  llm_interaction.py  main.py  pid_controller.py  plots.py  simulation.py  urdf_creator.py
results/results-gpt-5/: tuning_results.csv
results/results-gpt-5-mini/: tuning_results.csv
results/results-gpt-5-nano/: tuning_results.csv
